# neuronet-experiments

./: CMakeLists.txt
cmake/: CPM.cmake
src/: agent.cppm  main.cpp  mind.cppm
src/lib/: lib.non_copyable.cppm  lib.random.cppm
